--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <span class="author-block"><sup style="color:#007bff;">2</sup>Wuhan University,</span>
                 <span class="author-block"><sup style="color:#ffac33;">3</sup>Tsinghua University,</span>
                 <span class="author-block"><sup style="color:#ed4b82;">4</sup>Zhejiang University,</span>
-                <span class="author-block"><sup style="color:#9b51e0;">5</sup>Independent</span>
+                <span class="author-block"><sup style="color:#9b51e0;">5</sup>Rhymes AI</span>
               </div>
 
               <br>
