--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <div class="column has-text-centered">
                 <div class="publication-links">
                   <span class="link-block">
-                    <a href="" class="external-link button is-normal is-rounded is-dark">
+                    <a href="https://arxiv.org/abs/2410.12381" class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                       </span>
@@ -108,12 +108,6 @@
                     <a href="https://huggingface.co/spaces/HumanEval-V/HumanEval-V-Benchmark-Viewer" class="external-link button is-normal is-rounded is-dark">
                       <span class="icon" style="font-size:18px">🤗</span>
                       <span>Dataset Viewer</span>
-                    </a>
-                  </span>&nbsp
-                  <span class="link-block">
-                    <a href="" class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon" style="font-size:18px">🌊</span>
-                      <span>Twitter</span>
                     </a>
                   </span>
                 </div>
@@ -206,8 +200,13 @@
       <div class="container is-max-desktop content">
         <h2 class="title is-3 has-text-centered">BibTeX</h2>
         <pre><code>
-          @inproceedings{}
-    </code></pre>
+@article{zhang2024humanevalv,
+  title={HumanEval-V: Evaluating Visual Understanding and Reasoning Abilities of Large Multimodal Models Through Coding Tasks}, 
+  author={Zhang, Fengji and Wu, Linquan and Bai, Huiyu and Lin, Guancheng and Li, Xiao and Yu, Xiao and Wang, Yue and Chen, Bei and Keung, Jacky},
+  journal={arXiv preprint arXiv:2410.12381},
+  year={2024},
+}
+        </code></pre>
       </div>
     </section>
 
