--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <h2 class="title is-3" id="leaderboard">Leaderboard on HumanEval-V</h2>
           
           <div class="model-labels-container">
-            <span class="leaderboard-label open_source">Open-Source</span>
+            <span class="leaderboard-label open_source">Open-Weight</span>
             <span class="leaderboard-label proprietary">Proprietary</span>
           </div>
           <br>
