--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
       <div class="container">
         <div class="columns is-centered has-text-centered">
           <div class="column is-four-fifths">
+            <h2 class="title is-3">🔔News</h2>
+            <div class="content has-text-justified">
+              <ul>
+              <li><b>[2024.10.23]</b> <b>Claude 3.5 Sonnet (1022)</b> achieves <b>new SOTA</b> on HumanEval-V with <b>25.9</b> _pass@1_ and <b>42.6</b> _pass@10_ !</li>
+              <li><b>[2024.10.23]</b> We include more SOTA LMMs in the learderboard, including <a href="https://huggingface.co/mistralai/Pixtral-12B-2409">Pixtral</a>, <a href="https://huggingface.co/meta-llama/Llama-3.2-11B-Vision-Instruct">Llama-3.2-Vision</a>, <a href="https://huggingface.co/rhymes-ai/Aria">Aria</a>, and <a href="https://huggingface.co/AIDC-AI/Ovis1.6-Gemma2-9B">Ovis1.6-Gemma2</a></li>
+              <li><b>[2024.10.17]</b> Our paper is now accessible at <a href="https://huggingface.co/papers/2410.12381">huggingface.co/papers/2410.12381</a> (<b>#2</b> Paper of the day)</li>
+              </ul>
+            </div>
+
             <h2 class="title is-3">Introduction</h2>
             <div class="content has-text-justified">
               <p>
@@ -160,7 +169,7 @@
       <!-------------------------------------------------------------------- RESULTS SECTION -------------------------------------------------------------------->
       <div class="columns is-centered m-6">
         <div class="column is-full has-text-centered content">
-          <h2 class="title is-3" id="leaderboard">Leaderboard on HumanEval-V</h2>
+          <h2 class="title is-3" id="leaderboard">🏆Leaderboard on HumanEval-V🏆</h2>
           
           <div class="model-labels-container">
             <span class="leaderboard-label open_source">Open-Weight</span>
