--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <h2 class="title is-3">🔔News</h2>
             <div class="content has-text-justified">
               <ul>
+              <li><b>[2024.11.20]</b> <b>Pixtral-Large-Instruct-2411</b> achieves <b>new open-weight SOTA</b> on HumanEval-V with <b>11.1</b> <i>pass@1</i> and <b>26.9</b> <i>pass@10</i> !</li>
               <li><b>[2024.10.23]</b> <b>Claude 3.5 Sonnet (1022)</b> achieves <b>new SOTA</b> on HumanEval-V with <b>25.9</b> <i>pass@1</i> and <b>42.6</b> <i>pass@10</i> !</li>
               <li><b>[2024.10.23]</b> We include more SOTA LMMs in the learderboard, including <a href="https://huggingface.co/mistralai/Pixtral-12B-2409">Pixtral</a>, <a href="https://huggingface.co/meta-llama/Llama-3.2-11B-Vision-Instruct">Llama-3.2-Vision</a>, <a href="https://huggingface.co/rhymes-ai/Aria">Aria</a>, and <a href="https://huggingface.co/AIDC-AI/Ovis1.6-Gemma2-9B">Ovis1.6-Gemma2</a></li>
               <li><b>[2024.10.23]</b> We've updated the <i>Parsing Success Rate</i> metric (passing <i>Pylint</i> without errors). Many LMMs perform poorly, indicating a decline in generating syntactically correct code.</li>
